feat(attribution): add Journey Builder with model-level lookback configuration
Schema Changes:
- Add lookback_days to attribution_models (default 30, range 1-365)
- Each attribution model can now have its own lookback window
- Validates lookback_days presence and range

Journey Builder Service:
- Constructs touchpoint sequence from visitor sessions
- Filters by lookback window (model-configurable)
- Orders by session started_at ascending
- Excludes sessions without channel classification
- Returns ONLY channel data (session_id, channel, occurred_at)
- NO UTM processing (separation of concerns)

Key Architectural Decision:
- Lookback days stored per attribution model (not hardcoded)
- Different models can use different windows (B2C 30d, B2B 90d)
- Journey Builder is pure data fetcher, receives window as parameter
- Algorithms remain channel-only focused

Tests:
- 9 tests, 25 assertions, all passing
- Builder methods for DRY test fixtures
- Validates default 30-day window
- Validates custom lookback windows
- Verifies channel-only output (no UTMs)

--- a/test/fixtures/attribution_models.yml
+++ b/test/fixtures/attribution_models.yml
@@ -9,6 +9,7 @@ first_touch:
   compiled_rules: {}
   is_active: true
   is_default: true
+  lookback_days: 30
 
 last_touch:
   account: one
@@ -19,6 +20,7 @@ last_touch:
   compiled_rules: {}
   is_active: true
   is_default: false
+  lookback_days: 30
 
 linear:
   account: two
@@ -29,3 +31,4 @@ linear:
   compiled_rules: {}
   is_active: true
   is_default: true
+  lookback_days: 30
