--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -35,7 +35,7 @@ env:
   clear:
     POSTGRES_USER: multibuzz
     POSTGRES_DB: multibuzz_production
-    DB_HOST: multibuzz-postgres
+    DB_HOST: 10.124.0.2
     DB_PORT: 5432
     # Run the Solid Queue Supervisor inside the web server's Puma process to do jobs.
     # When you start using multiple servers, you should split out job processing to a dedicated machine.
@@ -97,7 +97,7 @@ accessories:
   postgres:
     image: timescale/timescaledb:latest-pg18
     host: 165.232.155.49
-    port: "127.0.0.1:5432:5432"
+    port: "10.124.0.2:5432:5432"
     env:
       clear:
         POSTGRES_USER: multibuzz
