fix(security): address critical IDOR and add security hardening
- Add has_prefix_id to FormSubmission and AttributionCredit models
- Fix IDOR in WaitlistController by using find_by_prefix_id!
- Add account status check to API authentication (reject suspended)
- Enable Content Security Policy with restrictive defaults
- Add ip_address, remote_ip, user_agent to filtered parameters
- Add security audit spec and architecture documentation

--- a/test/fixtures/api_keys.yml
+++ b/test/fixtures/api_keys.yml
@@ -30,3 +30,10 @@ other_account:
   key_prefix: "sk_test_othe"
   environment: 0  # test
   description: "Other Account Key"
+
+suspended_account:
+  account: suspended
+  key_digest: "<%= Digest::SHA256.hexdigest('sk_test_suspended789') %>"
+  key_prefix: "sk_test_susp"
+  environment: 0  # test
+  description: "Suspended Account Key"
