refactor(branding): rename multibuzz to mbuzz across codebase
- Update cookie names: _multibuzz_vid → _mbuzz_vid, _multibuzz_sid → _mbuzz_sid
- Update env var: MULTIBUZZ_API_KEY → MBUZZ_API_KEY
- Update domain references: multibuzz.io → mbuzz.co
- Update gem name in specs: gem 'multibuzz' → gem 'mbuzz'
- Update class/module references: Multibuzz:: → Mbuzz::
- Update helper method: multibuzz_visitor_id → mbuzz_visitor_id
- Update GitHub org in docs: multibuzz → mbuzz-tracking

All 363 tests pass.

--- a/docs/examples/auth_header.yml
+++ b/docs/examples/auth_header.yml
@@ -18,7 +18,7 @@ languages:
     code: |
       # Automatically handled by gem
       Mbuzz.configure do |config|
-        config.api_key = ENV['MULTIBUZZ_API_KEY']
+        config.api_key = ENV['MBUZZ_API_KEY']
       end
 
       # Gem adds header to all requests:
